# genai-systems

./: .gitignore  README.md  pyproject.toml
src/ai_librarian/: books_by_author_basic.py  books_by_author_corrective.py  checkout_return_agent.py  final_agent.py  recommend_books_basic.py  recommend_books_vector.py  recommend_books_vector_with_filters.py  routed_rec_checkout.py  routed_rec_checkout_with_memory.py  supervisor_agent.py
src/ai_librarian/chromadb/: chroma.sqlite3
src/ai_librarian/utils/: constants.py  enums.py  vectorstore.py
